# tcheflix-desktop

./: .gitignore  README.md  justfile
.github/workflows/: build-linux-appimage.yml  build-linux-flatpak.yml  build-macos-legacy.yml  build-macos.yml  build-windows.yml  tcheflix-release.yml
dev/tcheflix/: make_icon.py  tcheflix.just
dev/windows/: build_installer.ps1  installer.iss
resources/win/: iconres.rc.in
src/: Cargo.toml
src/config/src/: lib.rs
src/jfn_cef/: Cargo.toml  build.rs
src/jfn_cef/src/: business_common.rs  business_update.rs  embedded_js.rs  ffi.rs  injection.rs  lib.rs  resource.rs
src/jfn_rust/: Cargo.toml
src/jfn_rust/src/: app.rs  lib.rs  updater.rs
src/mpv/src/: api.rs  boot.rs
src/tcheflix/: Cargo.toml
src/tcheflix/src/: apply.rs  download.rs  github.rs  lib.rs  state.rs  version.rs
src/web/: client-settings.js  i18n.js  native-shim.js  subtitle-style.js  update.html  update.js
